添加对PreparedStatement中setBinaryStream的支持